# widgets

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/extinguisher/: CMakeLists.txt  main.cpp
examples/info/: CMakeLists.txt  main.cpp
include/Widgets/: InfoDialog
src/: CMakeLists.txt  info_dialog.cpp  info_dialog.hpp  info_dialog.ui  license_dialog.cpp
